change active tab z-index to prevent conflict with timeseries gadget

--- a/projects/OG-Web/web-engine/prototype/styles/analytics/og.analytics.gadget.OG-gadget-tabs.css
+++ b/projects/OG-Web/web-engine/prototype/styles/analytics/og.analytics.gadget.OG-gadget-tabs.css
@@ -100,6 +100,7 @@
 
     .OG-gadget-tabs li.og-active {
         background-color: #fff;
+        z-index: 5;
     }
 
     .OG-gadget-tabs li.og-active:after {
